--- a/style.css
+++ b/style.css
@@ -5,16 +5,19 @@
 
 *{
   box-sizing: border-box;
+  
+
+
 }
 
 :root{
-  --page-width: 8.5in;
+  --page-width: 10.2in;
   --page-height: 11in;
-  --main-width: 6.4in;
+  --main-width: 8in;
   --sidebar-width: calc(var(--page-width) - var(--main-width));
   --decorator-horizontal-margin: 0.2in;
 
-  --sidebar-horizontal-padding: 0.2in;
+  --sidebar-horizontal-padding: 0.1in;
 
   /* XXX: using px for very good precision control */
   --decorator-outer-offset-top: 10px;
@@ -33,7 +36,7 @@ body{
   width: var(--page-width);
   height: var(--page-height);
   margin: 0;
-  font-family: "sohne-var", sans-serif; 
+  font-family:  Helvetica Neue;
   font-weight: 300;
   line-height: 1.3;
   color: #444;
@@ -42,7 +45,7 @@ body{
 
 h1, h2, h3{
   margin: 0;
-  color: #000;
+  color: #111
 }
 
 li{
@@ -63,15 +66,15 @@ li{
   height: 100%;
   padding: 0.6in var(--sidebar-horizontal-padding);
   background-color: #f2f2f2;
-  font-size: 8.5pt;
+  font-size:1.5pt;
 }
 
 /* main */
 
 /** big title **/
-#title, h1, h2{
+/* #title, h1, h2{
   text-transform: uppercase;
-}
+} */
 
 #title{
   position: relative;
@@ -81,7 +84,7 @@ li{
 }
 
 #title h1{
-  font-weight: 300;
+  font-weight: 250;
   font-size: 18pt;
   line-height: 1.5;
 }
@@ -92,7 +95,7 @@ li{
 }
 
 .subtitle{
-  font-size: 8pt;
+  font-size: 10pt;
 }
 
 /*** categorial blocks ***/
@@ -106,7 +109,7 @@ li{
   top: var(--row-blocks-padding-top);
   /* XXX: 0.5px for aligning fx printing */
   left: calc((var(--date-block-width) + var(--decorator-horizontal-margin)));
-  font-weight: 400;
+  font-weight:400;
   font-size: 11pt;
   color: #555;
 }
@@ -254,7 +257,7 @@ li{
 .main-block.concise .details div:not(.concise){
   /* use padding to work around the fact that margin doesn't affect floated
      neighboring elements */
-  padding: 0.05in 0 0.07in 0;
+  padding: 0.0005in 0 0.07in 0;
 }
 
 .details .place{
@@ -275,7 +278,7 @@ li{
   position: relative;
   right: 3pt;
   top: 0.25pt;
-  font-family: FontAwesome;
+  font-family: "sohne-var","Helvetica Neue";
   font-weight: normal;
   font-style: normal;
   text-decoration: inherit;
@@ -325,24 +328,25 @@ li{
 }
 
 .side-block{
-  margin-top: 0.5in; 
+  margin-top: 0.2in; 
 }
 
 #contact ul{
   margin-top: 0.05in;
   padding-left: 0;
-  font-family: "Source Code Pro";
-  font-weight: 400;
-  line-height: 1.75;
+  font-family: "sohne-var","Helvetica Neue";
+  font-weight: 180;
+  line-height: 2;
+  font-size: 9pt;
 }
 
 #contact li > i{
-  width: 9pt; /* for text alignment */
+  width: 10pt; /* for text alignment */
   text-align: right;
 }
-
 #skills{
   line-height: 1.5;
+  font-size: 9pt;
 }
 
 #skills ul{
@@ -354,6 +358,7 @@ li{
   position: absolute;
   bottom: var(--sidebar-horizontal-padding);
   right: var(--sidebar-horizontal-padding);
+  left: 10px;
   font-size: 7.5pt;
   font-style: italic;
   line-height: 1.1;
@@ -363,7 +368,7 @@ li{
 
 #disclaimer code{
   color: #666;
-  font-family: "Source Code Pro";
+  font-family: "sohne-var","Helvetica Neue";
   font-weight: 400;
   font-style: normal;
 }
