--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
   width: var(--page-width);
   height: var(--page-height);
   margin: 0;
-  font-family:  Helvetica Neue;
+  font-family:  Segoe UI Helvetica Neue;
   font-weight: 300;
   line-height: 1.3;
   color: #444;
