--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body{
   width: var(--page-width);
   height: var(--page-height);
   margin: 0;
-  font-family:  Segoe UI Helvetica Neue;
-  font-weight: 300;
+  font-family:  Helvetica Neue;
+  font-weight: 500;
   line-height: 1.3;
   color: #444;
   hyphens: auto;
